--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
     port: 8080
-    context-path: #/liuzh/
+    context-path: /
 
 logging:
     level:
@@ -51,7 +51,7 @@ spring:
 #        returnPageInfo: check
 #        params: count=countSql
 #    mapper:
-#        mappers: tk.mybatis.springboot.util.MyMapper
+#        mappers: MyMapper
 #        notEmpty: true
 #        style: camelhump
 #    sqlSessionFactoryBean:
