--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,31 @@
 server.port=9090
-logging.level.tk.mybatis=TRACE
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=
+
+# logging
+logging.level.root=INFO
+logging.level.com.sound2gd=WARN
+logging.level.tk.mybatis=ERROR
+
+# datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
 spring.datasource.druid.test-on-borrow=true
 spring.datasource.druid.stat-view-servlet.allow=true
 
+# view
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.ftl
 spring.freemarker.cache=false
 spring.freemarker.request-context-attribute=request
-mybatis.type-aliases-package=tk.mybatis.springboot.model
+
+# mybatis & page-helper
+mybatis.type-aliases-package=com.sound2gd.model
 mybatis.mapper-locations=classpath:mapper/*.xml
-mapper.mappers=tk.mybatis.springboot.util.MyMapper
+mapper.mappers=com.sound2gd.common.crud.BaseMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
 pagehelper.helperDialect=mysql
